@@ -31,20 +31,15 @@ public class CompatibilitiesManager {
 
     public static boolean enableCompatibility(String pluginName) {
         try {
-            if (!ACTIVE_COMPATIBILITY_PROVIDERS.containsKey(pluginName)
-                && COMPATIBILITY_PROVIDERS.containsKey(pluginName)
+            if (!ACTIVE_COMPATIBILITY_PROVIDERS.containsKey(pluginName) && COMPATIBILITY_PROVIDERS.containsKey(pluginName)
                 && Bukkit.getPluginManager().isPluginEnabled(pluginName)) {
-                CompatibilityProvider<?> compatibilityProvider = COMPATIBILITY_PROVIDERS
-                    .get(pluginName)
-                    .getConstructor()
-                    .newInstance();
+                CompatibilityProvider<?> compatibilityProvider = COMPATIBILITY_PROVIDERS.get(pluginName).getConstructor().newInstance();
                 compatibilityProvider.enable(pluginName);
                 ACTIVE_COMPATIBILITY_PROVIDERS.put(pluginName, compatibilityProvider);
                 MessageOld.PLUGIN_HOOKS.log(pluginName);
                 return true;
             }
-        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException
-            | InvocationTargetException e) {
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             e.printStackTrace();
             return false;
         }
@@ -66,8 +61,7 @@ public class CompatibilitiesManager {
         }
     }
 
-    public static boolean addCompatibility(String compatibilityPluginName,
-        Class<? extends CompatibilityProvider<?>> clazz, boolean tryEnable) {
+    public static boolean addCompatibility(String compatibilityPluginName, Class<? extends CompatibilityProvider<?>> clazz, boolean tryEnable) {
         try {
             if (compatibilityPluginName != null && clazz != null) {
                 COMPATIBILITY_PROVIDERS.put(compatibilityPluginName, clazz);
@@ -83,8 +77,7 @@ public class CompatibilitiesManager {
         return false;
     }
 
-    public static boolean addCompatibility(String compatibilityPluginName,
-        Class<? extends CompatibilityProvider<?>> clazz) {
+    public static boolean addCompatibility(String compatibilityPluginName, Class<? extends CompatibilityProvider<?>> clazz) {
         return addCompatibility(compatibilityPluginName, clazz, false);
     }
 
@@ -97,8 +90,7 @@ public class CompatibilitiesManager {
     }
 
     public static boolean isCompatibilityEnabled(String pluginName) {
-        return ACTIVE_COMPATIBILITY_PROVIDERS.containsKey(pluginName)
-            && ACTIVE_COMPATIBILITY_PROVIDERS.get(pluginName).isEnabled();
+        return ACTIVE_COMPATIBILITY_PROVIDERS.containsKey(pluginName) && ACTIVE_COMPATIBILITY_PROVIDERS.get(pluginName).isEnabled();
     }
 
     public static ConcurrentHashMap<String, Class<? extends CompatibilityProvider<?>>> getCompatibilityProviders() {
